// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  background: #fff;
  margin: 0 auto;
}

.c2 {
  width: auto;
  height: 3rem;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5e6062;
  padding: 1rem 0;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  z-index: 2;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media (max-width:64em) {
  .c1 {
    height: 3.6rem;
  }
}

@media (max-width:64em) {
  .c2 {
    height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    padding: 0.7rem 0;
  }

  .c3:hover,
  .c3:active,
  .c3:focus {
    padding-bottom: 0.3rem;
  }
}

@media (max-width:64em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          role="img"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c12 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c32 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
  margin-top: 3.2rem;
  overflow: visible;
}

.c32 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c32 a:hover {
  color: #0064A0;
}

.c32 [data-type="chapter"] [data-type="page"] > h2 {
  padding-top: 3px;
}

.c32 .os-figure,
.c32 .os-figure:last-child {
  margin-bottom: 5px;
}

.c32 * {
  overflow: initial;
}

.c22 {
  position: relative;
  overflow: visible;
  min-height: 100%;
  width: 100%;
  padding: 0 3.2rem;
}

.c37 {
  height: 1.5rem;
  width: 1.5rem;
}

.c39 {
  height: 1.5rem;
  width: 1.5rem;
}

.c35 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
}

.c35 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c35 a:hover {
  color: #0064A0;
}

.c35::-webkit-details-marker {
  display: none;
}

.c35,
.c35 span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c35 a,
.c35 span a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c35 a:hover,
.c35 span a:hover {
  color: #0064A0;
}

.c35:hover,
.c35 span:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c40 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
}

.c40 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c40 a:hover {
  color: #0064A0;
}

.c40 blockquote {
  margin-left: 0;
}

.c33 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  box-shadow: 0 -1rem 1rem -1rem rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
  min-height: 6rem;
  padding: 0 3.2rem;
  padding-top: 1.8rem;
}

.c33 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c33 a:hover {
  color: #0064A0;
}

.c33 > .c34 {
  margin-bottom: 1.8rem;
}

.c33[open] .c36 {
  display: none;
}

.c33:not([open]) .c38 {
  display: none;
}

.c33 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c4 {
  height: 3rem;
  width: 3rem;
  color: #fff;
}

.c2 {
  width: 100%;
  max-width: 117rem;
  margin: 0 auto;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  font-weight: normal;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 2.4rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1.5rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: bold;
  display: block;
  margin: 1rem 0 0 0;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 13rem;
  background: linear-gradient(to right,#002468,#003DB1);
  z-index: 3;
}

.c17 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.45rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c20 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.45rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c8 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  position: relative;
}

.c16:after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: solid 0.1rem #5E6062;
}

.c18 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c18::-webkit-input-placeholder {
  color: #5E6062;
}

.c18::-moz-placeholder {
  color: #5E6062;
}

.c18:-ms-input-placeholder {
  color: #5E6062;
}

.c18::placeholder {
  color: #5E6062;
}

.c19 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
}

.c15 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  position: -webkit-sticky;
  position: sticky;
  top: 13rem;
  width: 100%;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  display: block;
  z-index: 2;
  background: #fff;
}

.c11 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.45rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c13 {
  font-family: Neue Helvetica W01;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
  padding: 0;
}

.c10 {
  border: none;
  padding: 0;
  margin: 0;
  overflow: visible;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c24 {
  position: -webkit-sticky;
  position: sticky;
  top: 13rem;
  margin-top: -5rem;
  overflow-y: auto;
  height: calc(100vh - 18rem);
  -webkit-transition: -webkit-transform 300ms, box-shadow 300ms, background-color 300ms;
  -webkit-transition: transform 300ms, box-shadow 300ms, background-color 300ms;
  transition: transform 300ms, box-shadow 300ms, background-color 300ms;
  background-color: #fafafa;
  z-index: 3;
  margin-left: -50vw;
  padding-left: 50vw;
  width: calc(50vw + 33.5rem);
  min-width: calc(50vw + 33.5rem);
  box-shadow: 0.2rem 0 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c24 ol {
  padding-inline-start: 10px;
}

.c24 > nav {
  padding: 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c24 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  overflow: visible;
}

.c26 {
  list-style: none;
  font-size: 1.4rem;
}

.c27 {
  list-style: none;
  font-size: 1.4rem;
  overflow: visible;
  position: relative;
}

.c27:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.c28 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  overflow: visible;
  -webkit-transition: margin-left 300ms;
  transition: margin-left 300ms;
}

.c28 *:target:before {
  content: " ";
  display: block;
  position: relative;
  margin-top: -18rem;
  height: 18rem;
  visibility: hidden;
}

.c0 {
  overflow: visible;
  background-color: #fafafa;
  width: 100%;
  min-height: 100%;
}

.c23 {
  overflow: visible;
  margin: 0 auto;
  max-width: 117rem;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c29 {
  margin-right: -3.2rem;
}

.c30 {
  overflow: visible;
  background-color: #fdfdfd;
  -webkit-transition: max-width 300ms;
  transition: max-width 300ms;
  max-width: 83.5rem;
}

.c31 {
  padding: 0 3.2rem;
}

@media (max-width:64em) {
  .c32 {
    margin-top: 1.6rem;
  }
}

@media (max-width:64em) {
  .c22 {
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c33 {
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c33 {
    min-height: 4rem;
    padding-top: 0.8rem;
  }

  .c33 > .c34 {
    margin-bottom: 0.8rem;
  }
}

@media (max-width:64em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c6 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c6 {
    white-space: normal;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    max-height: 4rem;
    margin-top: 0.3rem;
  }
}

@media (max-width:64em) {
  .c1 {
    padding: 1.6rem;
    height: 10.4rem;
  }
}

@media (max-width:64em) {
  .c8 {
    height: 4rem;
  }
}

@media (max-width:64em) {
  .c16 {
    border: none;
    margin-right: 1rem;
  }
}

@media (max-width:64em) {
  .c18 {
    display: none;
  }
}

@media (max-width:64em) {
  .c21 {
    display: none;
  }
}

@media (max-width:64em) {
  .c7 {
    top: 10.4rem;
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:64em) {
  .c14 {
    display: none;
  }
}

@media (max-width:64em) {
  .c24 {
    width: calc(50vw + 28.8rem);
    min-width: calc(50vw + 28.8rem);
    margin-top: -4rem;
    top: 10.4rem;
    height: calc(100vh - 14rem);
  }
}

@media (max-width:64em) {
  .c24 {
    overflow-y: hidden;
    -webkit-transform: translateX(-33.5rem);
    -ms-transform: translateX(-33.5rem);
    transform: translateX(-33.5rem);
    box-shadow: none;
    background-color: transparent;
  }

  .c24 > * {
    visibility: hidden;
    opacity: 0;
  }
}

@media (max-width:64em) {
  .c25 {
    height: 4rem;
  }
}

@media (max-width:64em) {
  .c28 {
    margin-left: -33.5rem;
  }
}

@media (max-width:64em) {
  .c29 {
    margin: 0 -1.6rem;
  }
}

@media (max-width:64em) {
  .c29 {
    margin-left: -3.2rem;
  }
}

@media (max-width:64em) {
  .c30 {
    max-width: 117rem;
    margin: 0 auto;
  }
}

@media (max-width:64em) {
  .c31 {
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c31 {
    padding: 0 3.2rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <a
          className="c3"
          href="/details/books/book-slug-1"
        >
          <svg
            aria-hidden="true"
            className="c4 c5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            />
          </svg>
          Test Book 1
        </a>
        <h1
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span class=\\"os-text\\">Test Page 4</span>",
            }
          }
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <button
          aria-label="Click to open the Table of Contents"
          className="c9 c10"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c11 c12"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c13"
          >
            Table of contents
          </h3>
        </button>
        <button
          aria-label="Click to close the Table of Contents"
          className="c14 c10"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c11 c12"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c13"
          >
            Table of contents
          </h3>
        </button>
        <div
          className="c15"
        >
          <div
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c17 c12"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
            <input
              className="c18"
              placeholder="Search this book"
            />
          </div>
          <div
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c20 c12"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                fill="currentColor"
              />
            </svg>
            <h3
              className="c21"
            >
              Print options
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c22"
    >
      <div
        className="c23"
      >
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <button
              aria-label="Click to open the Table of Contents"
              className="c9 c10"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="c11 c12"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="c13"
              >
                Table of contents
              </h3>
            </button>
            <button
              aria-label="Click to close the Table of Contents"
              className="c14 c10"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="c11 c12"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="c13"
              >
                Table of contents
              </h3>
            </button>
          </div>
          <nav>
            <ol>
              <li
                className="c26"
              >
                <a
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="c26"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c26"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 2</span>",
                          }
                        }
                        href="1-test-page-2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c26"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c26"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="1-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c26"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="c27"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="1-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c26"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c26"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="1-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c26"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c26"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="1-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c26"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c26"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="1-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
        <div
          className="c28"
        >
          <div
            className="c29"
          >
            <div
              className="c30"
            >
              <div
                className="c31"
              >
                <div
                  className="c32 "
                  id="main-content"
                  tabIndex={-1}
                >
                  <div
                    data-type="chapter"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
                        }
                      }
                      data-type="page"
                    />
                  </div>
                </div>
              </div>
              <details
                className="c33"
              >
                <summary
                  className="c34 c35"
                >
                  <svg
                    aria-hidden="true"
                    className="c36 c37 c12"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 192 512"
                  >
                    <path
                      d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    className="c38 c39 c12"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Citation/Attribution
                  </span>
                </summary>
                <div
                  className="c40"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "
<p>
  Want to cite, share, or modify this book? This book is Sweet License
  1.0 and you must attribute OpenStax.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-test-page-2
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/book-slug-1/pages/1-test-page-2\\">https://openstax.org/books/book-slug-1/pages/1-test-page-2</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/1-test-page-2\\">https://openstax.org/books/book-slug-1/pages/1-test-page-2</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/doesnotmatter\\">https://openstax.org/books/book-slug-1/pages/doesnotmatter</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 OpenStax. Textbook content produced by OpenStax is licensed under a
  Sweet License 1.0 license. <strong>The OpenStax logo, OpenStax book
  covers, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
                    }
                  }
                />
              </details>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  background: #fff;
  margin: 0 auto;
}

.c2 {
  width: auto;
  height: 3rem;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5e6062;
  padding: 1rem 0;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  z-index: 2;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media (max-width:64em) {
  .c1 {
    height: 3.6rem;
  }
}

@media (max-width:64em) {
  .c2 {
    height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media (max-width:64em) {
  .c3 {
    padding: 0.7rem 0;
  }

  .c3:hover,
  .c3:active,
  .c3:focus {
    padding-bottom: 0.3rem;
  }
}

@media (max-width:64em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          role="img"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c6 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c24 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
  margin-top: 3.2rem;
  overflow: visible;
}

.c24 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c24 a:hover {
  color: #0064A0;
}

.c24 [data-type="chapter"] [data-type="page"] > h2 {
  padding-top: 3px;
}

.c24 .os-figure,
.c24 .os-figure:last-child {
  margin-bottom: 5px;
}

.c24 * {
  overflow: initial;
}

.c16 {
  position: relative;
  overflow: visible;
  min-height: 100%;
  width: 100%;
  padding: 0 3.2rem;
}

.c29 {
  height: 1.5rem;
  width: 1.5rem;
}

.c31 {
  height: 1.5rem;
  width: 1.5rem;
}

.c27 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
}

.c27 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c27 a:hover {
  color: #0064A0;
}

.c27::-webkit-details-marker {
  display: none;
}

.c27,
.c27 span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27 a,
.c27 span a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c27 a:hover,
.c27 span a:hover {
  color: #0064A0;
}

.c27:hover,
.c27 span:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c25 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  box-shadow: 0 -1rem 1rem -1rem rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
  min-height: 6rem;
  padding: 0 3.2rem;
  padding-top: 1.8rem;
}

.c25 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c25 a:hover {
  color: #0064A0;
}

.c25 > .c26 {
  margin-bottom: 1.8rem;
}

.c25[open] .c28 {
  display: none;
}

.c25:not([open]) .c30 {
  display: none;
}

.c25 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c11 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.45rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c14 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.45rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c2 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  position: relative;
}

.c10:after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: solid 0.1rem #5E6062;
}

.c12 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c12::-webkit-input-placeholder {
  color: #5E6062;
}

.c12::-moz-placeholder {
  color: #5E6062;
}

.c12:-ms-input-placeholder {
  color: #5E6062;
}

.c12::placeholder {
  color: #5E6062;
}

.c13 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
}

.c9 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 13rem;
  width: 100%;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  display: block;
  z-index: 2;
  background: #fff;
}

.c5 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.45rem;
  margin-right: 0.5rem;
  color: #5E6062;
}

.c7 {
  font-family: Neue Helvetica W01;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #5E6062;
  margin: 0;
  padding: 0;
}

.c4 {
  border: none;
  padding: 0;
  margin: 0;
  overflow: visible;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: none;
}

.c18 {
  position: -webkit-sticky;
  position: sticky;
  top: 13rem;
  margin-top: -5rem;
  overflow-y: auto;
  height: calc(100vh - 18rem);
  -webkit-transition: -webkit-transform 300ms, box-shadow 300ms, background-color 300ms;
  -webkit-transition: transform 300ms, box-shadow 300ms, background-color 300ms;
  transition: transform 300ms, box-shadow 300ms, background-color 300ms;
  background-color: #fafafa;
  z-index: 3;
  margin-left: -50vw;
  padding-left: 50vw;
  width: calc(50vw + 33.5rem);
  min-width: calc(50vw + 33.5rem);
  box-shadow: 0.2rem 0 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c18 ol {
  padding-inline-start: 10px;
}

.c18 > nav {
  padding: 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  overflow: visible;
}

.c20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  overflow: visible;
  -webkit-transition: margin-left 300ms;
  transition: margin-left 300ms;
}

.c20 *:target:before {
  content: " ";
  display: block;
  position: relative;
  margin-top: -18rem;
  height: 18rem;
  visibility: hidden;
}

.c0 {
  overflow: visible;
  background-color: #fafafa;
  width: 100%;
  min-height: 100%;
}

.c17 {
  overflow: visible;
  margin: 0 auto;
  max-width: 117rem;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c21 {
  margin-right: -3.2rem;
}

.c22 {
  overflow: visible;
  background-color: #fdfdfd;
  -webkit-transition: max-width 300ms;
  transition: max-width 300ms;
  max-width: 83.5rem;
}

.c23 {
  padding: 0 3.2rem;
}

@media (max-width:64em) {
  .c24 {
    margin-top: 1.6rem;
  }
}

@media (max-width:64em) {
  .c16 {
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c25 {
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c25 {
    min-height: 4rem;
    padding-top: 0.8rem;
  }

  .c25 > .c26 {
    margin-bottom: 0.8rem;
  }
}

@media (max-width:64em) {
  .c2 {
    height: 4rem;
  }
}

@media (max-width:64em) {
  .c10 {
    border: none;
    margin-right: 1rem;
  }
}

@media (max-width:64em) {
  .c12 {
    display: none;
  }
}

@media (max-width:64em) {
  .c15 {
    display: none;
  }
}

@media (max-width:64em) {
  .c1 {
    top: 10.4rem;
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:64em) {
  .c8 {
    display: none;
  }
}

@media (max-width:64em) {
  .c18 {
    width: calc(50vw + 28.8rem);
    min-width: calc(50vw + 28.8rem);
    margin-top: -4rem;
    top: 10.4rem;
    height: calc(100vh - 14rem);
  }
}

@media (max-width:64em) {
  .c18 {
    overflow-y: hidden;
    -webkit-transform: translateX(-33.5rem);
    -ms-transform: translateX(-33.5rem);
    transform: translateX(-33.5rem);
    box-shadow: none;
    background-color: transparent;
  }

  .c18 > * {
    visibility: hidden;
    opacity: 0;
  }
}

@media (max-width:64em) {
  .c19 {
    height: 4rem;
  }
}

@media (max-width:64em) {
  .c20 {
    margin-left: -33.5rem;
  }
}

@media (max-width:64em) {
  .c21 {
    margin: 0 -1.6rem;
  }
}

@media (max-width:64em) {
  .c21 {
    margin-left: -3.2rem;
  }
}

@media (max-width:64em) {
  .c22 {
    max-width: 117rem;
    margin: 0 auto;
  }
}

@media (max-width:64em) {
  .c23 {
    padding: 0 1.6rem;
  }
}

@media (max-width:64em) {
  .c23 {
    padding: 0 3.2rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          aria-label="Click to open the Table of Contents"
          className="c3 c4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c5 c6"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c7"
          >
            Table of contents
          </h3>
        </button>
        <button
          aria-label="Click to close the Table of Contents"
          className="c8 c4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c5 c6"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c7"
          >
            Table of contents
          </h3>
        </button>
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <svg
              aria-hidden="true"
              className="c11 c6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
            <input
              className="c12"
              placeholder="Search this book"
            />
          </div>
          <div
            className="c13"
          >
            <svg
              aria-hidden="true"
              className="c14 c6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                fill="currentColor"
              />
            </svg>
            <h3
              className="c15"
            >
              Print options
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c16"
    >
      <div
        className="c17"
      >
        <div
          className="c18"
        >
          <div
            className="c19"
          >
            <button
              aria-label="Click to open the Table of Contents"
              className="c3 c4"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="c5 c6"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="c7"
              >
                Table of contents
              </h3>
            </button>
            <button
              aria-label="Click to close the Table of Contents"
              className="c8 c4"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="c5 c6"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="c7"
              >
                Table of contents
              </h3>
            </button>
          </div>
        </div>
        <div
          className="c20"
        >
          <div
            className="c21"
          >
            <div
              className="c22"
            >
              <div
                className="c23"
              >
                <div
                  className="c24 "
                  id="main-content"
                  tabIndex={-1}
                >
                  <div
                    data-type="chapter"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "",
                        }
                      }
                      data-type="page"
                    />
                  </div>
                </div>
              </div>
              <details
                className="c25"
              >
                <summary
                  className="c26 c27"
                >
                  <svg
                    aria-hidden="true"
                    className="c28 c29 c6"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 192 512"
                  >
                    <path
                      d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    className="c30 c31 c6"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Citation/Attribution
                  </span>
                </summary>
              </details>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
